# takuge-toolkit

./: .gitignore  README.md  environment.yml  pyproject.toml
kedro_extention/extras/: dataset.py
kedro_extention/runner/: batch_runner.py
nlp_classifier/: pipeline_components.py  utils.py
sklearn-extention/: nlp.py
sklearn_extention/: data-engineering.py  nlp.py
takuge_toolkit/kedro_extention/runner/: __init__.py
takuge_toolkit/nlp_classifier/: analysis.py
takuge_toolkit/tokenizer/: base.py  mecab.py
tests/: test.py
tokenizer/: base.py  mecab.py
