[tool.poetry]
name = "takuge-toolkit"
version = "0.1.0"
description = ""
authors = ["takuma-iwasawa <takuma_iwasawa@fumankaitori.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mecab-python3 = "^1.0.5"
pandas = "^1.4.2"
scikit-learn = "^1.1.1"
swifter = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
